src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>SBQQ__AmendmentRenewalBehavior__c</fullName>
        <description>The basis for which a Renewal Start Date and Amendment End Date are calculated.</description>
        <inlineHelpText>The basis for which a Renewal Start Date and Amendment End Date are calculated.</inlineHelpText>
        <label>Amendment &amp; Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest End Date</fullName>
                    <default>true</default>
                    <label>Latest End Date</label>
                </value>
                <value>
                    <fullName>Earliest End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentStartDate__c</fullName>
        <description>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</description>
        <inlineHelpText>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</inlineHelpText>
        <label>Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include contact roles from the original opportunity in the renewal opportunity.</description>
        <inlineHelpText>Select to include contact roles from the original opportunity in the renewal opportunity.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include the original opportunity partners in renewal opportunity.</description>
        <inlineHelpText>Select to include the original opportunity partners in renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisableAmendmentCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</description>
        <inlineHelpText>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</inlineHelpText>
        <label>Disable Amendment Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the contract is evergreen.</description>
        <inlineHelpText>Indicates whether the contract is evergreen.</inlineHelpText>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Contract end date for use in time-based workflows.</description>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MDQRenewalBehavior__c</fullName>
        <description>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment’s data.</description>
        <inlineHelpText>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment&apos;s data.</inlineHelpText>
        <label>MDQ Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De-segmented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</description>
        <inlineHelpText>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OpportunityPricebookId__c</fullName>
        <description>Price Book ID of the related opportunity or quote.</description>
        <formula>IF(NOT(ISBLANK(SBQQ__Opportunity__c)), SBQQ__Opportunity__r.Pricebook2Id, SBQQ__Quote__r.SBQQ__PricebookId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ID of the Price Book used from the original Opportunity.</inlineHelpText>
        <label>Opportunity or Quote Price Book ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity from which this Contract was created.</description>
        <inlineHelpText>The Opportunity from which this Contract was created.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes.</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote from which this Contract was created.</description>
        <inlineHelpText>Quote from which this Contract was created.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</description>
        <inlineHelpText>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity if different from the default.</description>
        <inlineHelpText>Record type of renewal opportunity if different from the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</description>
        <inlineHelpText>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</description>
        <inlineHelpText>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to automatically generate a renewal quote on renewal opportunities.</description>
        <inlineHelpText>Select this option to automatically generate a renewal quote on renewal opportunities.</inlineHelpText>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Legacy Amendments.</description>
        <inlineHelpText>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</inlineHelpText>
        <label>Combine Subscription Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Correction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Correction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_L12M__c</fullName>
        <label>Sales L12M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_L12M_form__c</fullName>
        <formula>Sales_L12M__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales L12M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_L24M__c</fullName>
        <label>Sales L24M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_starter_package__c</fullName>
        <label>Sales starter package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Several_Customer_numbers__c</fullName>
        <formula>IF( Several_Customer_numbers_text__c  &lt;&gt;  &quot;&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Several Customer numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Several_Customer_numbers_text__c</fullName>
        <label>Several Customer numbers (text)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siroforce_Status__c</fullName>
        <label>Siroforce Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_Implants_During_Contract_Period__c</fullName>
        <inlineHelpText>To be filled by trigger/batch?</inlineHelpText>
        <label>Sold Implants During Contract Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceRecordCustomerId__c</fullName>
        <description>Used for Mail Merge templates</description>
        <formula>SourceRecord__r.Customer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Record Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Source_Record__c.CIM_Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Source_Record__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SureSmileCustomerNumber__c</fullName>
        <description>TFUS-000003033</description>
        <label>SureSmile Practice Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <description>The Value that should have been ordered to keep in line with the target. 
Example: for a contract with 100 implants created on jan 1st lasting until dec 31th, On Mar 1st target is 25 implants, Jul 1st 50 implants etc.</description>
        <formula>Contract_Value_D__c * Contract_Time_Elapsed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Value that should have been ordered to keep in line with the target. 
Example: for a contract with 100 implants created on jan 1st lasting until dec 31th, On Mar 1st target is 25 implants, Jul 1st 50 implants etc.</inlineHelpText>
        <label>Projected Target Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_During_Contract_Period__c</fullName>
        <inlineHelpText>To be set by trigger/batch?</inlineHelpText>
        <label>Total Sales During Contract Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Voucher</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Loyalty Program</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>DS Activate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_Type__c</fullName>
        <description>The Type of Voucher. Based on information from Movex. Read only field for all profiles</description>
        <inlineHelpText>The Type of Voucher. Based on information from Movex.</inlineHelpText>
        <label>Voucher Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Voucher - Conversion</fullName>
                </value>
                <value>
                    <fullName>Voucher - Pilot</fullName>
                </value>
                <value>
                    <fullName>Voucher - Planning Assistance</fullName>
                </value>
                <value>
                    <fullName>Voucher - Safe</fullName>
                </value>
                <value>
                    <fullName>Voucher - Universal</fullName>
                </value>
                <value>
                    <fullName>Voucher - Wafers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>follow_on_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to divide between first pricing contract and follow-on contracts (DE)</description>
        <label>follow-on contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signed_contract_sent_back__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to track if the contract was sent back from customer</description>
        <inlineHelpText>activate this checkbox when contract is send back from customer</inlineHelpText>
        <label>signed contract sent back</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>,01220000000AKPw,01220000000AKQ1</value>
        </filters>
        <label>All Contracts</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>DE_Pricing_Vertr_ge_4_Wochen_Restzeit</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Pricing_contract</value>
        </filters>
        <filters>
            <field>Days_until_Expiration__c</field>
            <operation>lessOrEqual</operation>
            <value>30</value>
        </filters>
        <label>DE: Pricing Verträge &lt; 4 Wochen Restzeit</label>
        <language>de</language>
        <sharedTo>
            <group>DACH_ADMIN</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Purchasing_Tiering_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Contract_Model__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>SourceRecord__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Purchasing_Contract_Turnover</value>
        </filters>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>Tier Dentist,Tier Lab</value>
        </filters>
        <label>DE: Purchasing Tiering Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <group>DE_Customer_Service_Tier_contracts</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <description>Intended to be the global contract record type - first version is a very basic contract launched in BeNeLux</description>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Agreement</fullName>
        <active>true</active>
        <description>TFUS-000003033</description>
        <label>Customer Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manual_Implant_Quantity_Contract</fullName>
        <active>true</active>
        <description>Not integrated with Movex</description>
        <label>Manual Implant Quantity Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pricing_contract</fullName>
        <active>true</active>
        <description>Used for contracts based on the new Discount Model for IMPL DE</description>
        <label>Pricing contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchasing_Contract_Turnover</fullName>
        <active>true</active>
        <description>Use this Record Type when you create a Purchasing Contract</description>
        <label>Purchasing Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simplant_Voucher</fullName>
        <active>true</active>
        <label>Simplant Voucher</label>
    </recordTypes>
    <recordTypes>
        <fullName>siroForceIntegration</fullName>
        <active>true</active>
        <label>siroForceIntegration</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Allow_abutment_commitment</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Abutment_commitment_perc__c &gt;= 0.80,  OR(Implant_commitment_perc__c &lt; 0.90, ISNULL(Implant_commitment_perc__c)))</errorConditionFormula>
        <errorDisplayField>Abutment_commitment_pick__c</errorDisplayField>
        <errorMessage>You cannot use abutment commitment if the customer do not commit to more than 90% of last year&apos;s implants volume</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allow_implants_commitment_abs_solution</fullName>
        <active>true</active>
        <description>Used if the implants commitment is added in percentage (as a picklist)</description>
        <errorConditionFormula>IF(VALUE(TEXT(Implant_commitment_perc_input__c))&gt;0, IF(Implant_forecast__c &gt; 0, Implant_forecast__c, Implant_volume_L12M__c)* VALUE(TEXT(Implant_commitment_perc_input__c))*0.01 &lt;= IF(General_practitioner__c = true, IF(Implant_volume_L12M__c&gt;=0,9,-1), IF(Implant_volume_L12M__c&gt;=0, 29, -1)), false)</errorConditionFormula>
        <errorDisplayField>Implant_commitment_perc_input__c</errorDisplayField>
        <errorMessage>Implants commitment is only allowed if it exceeds 20 implants (for General Practitioners, implants commitment is allowed if it exceeds 10 implants)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allow_implants_commitment_perc_solution</fullName>
        <active>false</active>
        <description>Used if absolute numbers for the implant commitment is used</description>
        <errorConditionFormula>IF( General_practitioner__c = true,AND(Implant_commitment__c &lt;= 14, Implant_commitment__c &gt;0), AND(Implant_commitment__c &lt;= 29, Implant_commitment__c&gt;0))</errorConditionFormula>
        <errorDisplayField>Implant_commitment__c</errorDisplayField>
        <errorMessage>Implants commitment is only allowed if it exceeds 30 implants (for General Practitioners, implants commitment is allowed if it exceeds 15 implants)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Allow_pooling_commitment</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Pooled_order_commitment_perc__c &gt;= 0.60,  OR(Implant_commitment_perc__c &lt; 0.90, ISNULL(Implant_commitment_perc__c)))</errorConditionFormula>
        <errorDisplayField>Pooled_order_commitment_perc_input__c</errorDisplayField>
        <errorMessage>You cannot use pooled order commitment if the customer do not commit to more than 90% of last year&apos;s implants volume</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Atlantis_Can_not_be_less_100</fullName>
        <active>false</active>
        <description>Gives the user a error message if the total quantity is lower than 100</description>
        <errorConditionFormula>ISPICKVAL(Account.Country__c, &quot;DE&quot;)  &amp;&amp;  ISPICKVAL( Contract_Type__c , &quot;Abutment Quantity (Discount)&quot;) &amp;&amp;  Contract_Value_D__c  &lt; 100</errorConditionFormula>
        <errorDisplayField>Contract_Value_D__c</errorDisplayField>
        <errorMessage>The Contract value can not be less that 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_approved_activated_Contract</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Status, &quot;Activated&quot;) || ISPICKVAL( Approval_Status__c , &quot;Approved&quot;)) &amp;&amp; (RecordType.DeveloperName = &apos;Pricing_contract&apos; || RecordType.DeveloperName = &apos;Purchasing_Contract_Turnover&apos;) &amp;&amp;  !CONTAINS($Profile.Name, &quot;#System&quot;) &amp;&amp; !ISPICKVAL($User.Team__c, &apos;Customer Service Implants Contracts&apos;)</errorConditionFormula>
        <errorMessage>Please note! You cannot change a Contract that is being approved or has been approved/activated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_negotiated_discounts_equipment</fullName>
        <active>true</active>
        <errorConditionFormula>IF(CONTAINS(TEXT(Contract_discount_equipment__c*100), &quot;.1&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_equipment__c*100), &quot;.2&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_equipment__c*100), &quot;.3&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_equipment__c*100), &quot;.4&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_equipment__c*100), &quot;.6&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_equipment__c*100), &quot;.7&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_equipment__c*100), &quot;.8&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_equipment__c*100), &quot;.9&quot;), true,
false))))))))</errorConditionFormula>
        <errorDisplayField>Contract_discount_equipment__c</errorDisplayField>
        <errorMessage>You cannot add that discount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_negotiated_discounts_materials</fullName>
        <active>true</active>
        <errorConditionFormula>IF(CONTAINS(TEXT(Contract_discount_pricing_materials__c*100), &quot;.1&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_pricing_materials__c*100), &quot;.2&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_pricing_materials__c*100), &quot;.3&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_pricing_materials__c*100), &quot;.4&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_pricing_materials__c*100), &quot;.6&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_pricing_materials__c*100), &quot;.7&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_pricing_materials__c*100), &quot;.8&quot;), true,
IF(CONTAINS(TEXT(Contract_discount_pricing_materials__c*100), &quot;.9&quot;), true,
false))))))))</errorConditionFormula>
        <errorDisplayField>Contract_discount_pricing_materials__c</errorDisplayField>
        <errorMessage>You cannot add that discount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_order_pooling</fullName>
        <active>true</active>
        <errorConditionFormula>OR(IF(TEXT(Pooled_order_commitment_perc_input__c) = &quot;&gt;100&quot;,101,VALUE(TEXT(Pooled_order_commitment_perc_input__c))) &gt; 
 Implant_commitment_abs__c, AND(IF(TEXT(Pooled_order_commitment_perc_input__c) = &quot;&gt;100&quot;,101,VALUE(TEXT(Pooled_order_commitment_perc_input__c)))&gt;0, ISNULL(Implant_commitment_abs__c)))</errorConditionFormula>
        <errorDisplayField>Pooled_order_commitment_perc_input__c</errorDisplayField>
        <errorMessage>Your pooled order commitment cannot be higher than your Implants commitment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Can_not_be_longer_than_two_year</fullName>
        <active>true</active>
        <description>Gives the user a error message if the End date is more than two years after the start date. Enabled for DE. For draft contracts only as we do not want the integration to fail.</description>
        <errorConditionFormula>$User.Id &lt;&gt; &apos;00520000001CBYl&apos;  &amp;&amp; $User.Id &lt;&gt; &apos;0050J000009Vt7z&apos; &amp;&amp; /*skip integration user*/
EndDate &gt; ADDMONTHS(StartDate,24) &amp;&amp;   ISPICKVAL(Account.Country__c, &quot;DE&quot;) &amp;&amp;  ISPICKVAL(Status,&quot;Draft&quot;)</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>The Contract can not exceed two years in length</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Value_Can_not_be_less_than_min</fullName>
        <active>true</active>
        <description>This validation rule applies when you try to add a product discount but has a quantity that is less than the approved one.</description>
        <errorConditionFormula>TEXT(Contract_Type__c) = &quot;Package Offers&quot; &amp;&amp;  
TEXT(Contract_Model__c)  &lt;&gt;  &quot;Custom (Add info in special Terms &amp; Discount field)&quot; &amp;&amp;  Contract_Value_D__c  &lt;  VALUE( TRIM( LEFT( TEXT(Contract_Model__c ),3 )) ) &amp;&amp;
TEXT( Status) = &quot;Draft&quot;</errorConditionFormula>
        <errorDisplayField>Contract_Value_D__c</errorDisplayField>
        <errorMessage>The Contract Value must be equal or bigger than the minimum approved value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Implant_forecast_only_for_new_customers</fullName>
        <active>true</active>
        <errorConditionFormula>AND(New_customer__c =  false, Correction_of_sales_needed__c = false, Implant_forecast__c &gt;-9999999999 )</errorConditionFormula>
        <errorDisplayField>Implant_forecast__c</errorDisplayField>
        <errorMessage>You can only add a forecast for new customers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Implants_commitment_cant_be_empty</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNULL(Implant_commitment__c),  RecordTypeId = &apos;0120J000000R2Co&apos;)</errorConditionFormula>
        <errorDisplayField>Implant_commitment__c</errorDisplayField>
        <errorMessage>You need to add a commitment for Implants (otherwise add 0 as commitment)</errorMessage>
    </validationRules>
</CustomObject>